--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
         "react-collapse": "^5.1.0",
         "react-day-picker": "^7.4.10",
         "react-dom": "^17.0.2",
+        "react-hook-form": "^7.5.3",
         "react-modal": "^3.12.1"
     }
 }
