--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-    "name": "kompletthet-frontend",
-    "version": "1.8.2",
-    "main": "index.js",
+    "name": "psb-inntektsmelding-frontend",
+    "version": "0.0.1",
     "scripts": {
         "test": "jest",
         "test-watch": "jest --watch",
@@ -65,7 +64,6 @@
         "@navikt/period-utils": "^0.0.3",
         "@types/react": "^17.0.3",
         "@types/react-dom": "^17.0.3",
-        "@types/react-modal": "^3.12.0",
         "axios": "^0.21.1",
         "classnames": "^2.2.6",
         "cors": "^2.8.5",
@@ -75,37 +73,25 @@
         "nav-datovelger": "^11.0.0",
         "nav-frontend-alertstriper": "^3.0.51",
         "nav-frontend-alertstriper-style": "^2.0.38",
-        "nav-frontend-chevron": "^1.0.28",
-        "nav-frontend-chevron-style": "^1.0.4",
         "nav-frontend-core": "^5.0.11",
-        "nav-frontend-etiketter": "^2.0.32",
-        "nav-frontend-etiketter-style": "^1.0.19",
         "nav-frontend-ikoner-assets": "^2.0.10",
         "nav-frontend-js-utils": "^1.0.17",
         "nav-frontend-knapper": "^2.0.32",
         "nav-frontend-knapper-style": "^1.0.17",
         "nav-frontend-lenker": "^1.0.60",
         "nav-frontend-lenker-style": "^1.0.2",
-        "nav-frontend-lukknapp": "^1.0.50",
-        "nav-frontend-lukknapp-style": "^1.0.2",
-        "nav-frontend-modal": "^1.0.63",
-        "nav-frontend-modal-style": "^1.0.2",
         "nav-frontend-paneler": "^2.0.32",
         "nav-frontend-paneler-style": "^1.0.2",
         "nav-frontend-skjema": "^3.2.3",
         "nav-frontend-skjema-style": "^2.2.2",
         "nav-frontend-spinner": "^2.0.16",
         "nav-frontend-spinner-style": "^1.0.2",
-        "nav-frontend-tabs": "^1.0.3",
-        "nav-frontend-tabs-style": "^1.0.3",
         "nav-frontend-typografi": "^3.0.4",
         "nav-frontend-typografi-style": "^1.0.35",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
-        "react-collapse": "^5.1.0",
         "react-day-picker": "^7.4.10",
         "react-dom": "^17.0.2",
-        "react-hook-form": "^7.5.3",
-        "react-modal": "^3.12.1"
+        "react-hook-form": "^7.5.3"
     }
 }
