--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "psb-inntektsmelding-frontend",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "scripts": {
         "test": "jest",
         "test-watch": "jest --watch",
@@ -55,10 +55,10 @@
         "webpack-merge": "^5.7.3"
     },
     "dependencies": {
-        "@navikt/array-utils": "^0.0.1",
-        "@navikt/date-utils": "^0.0.2",
+        "@navikt/k9-array-utils": "^0.0.1",
+        "@navikt/k9-date-utils": "^0.0.2",
         "@navikt/fnrvalidator": "^1.1.4",
-        "@navikt/period-utils": "^0.0.3",
+        "@navikt/k9-period-utils": "^0.0.3",
         "@types/react": "^17.0.3",
         "@types/react-dom": "^17.0.3",
         "axios": "^0.21.1",
