--- a/package.json
+++ b/package.json
@@ -55,11 +55,12 @@
         "webpack-merge": "^5.7.3"
     },
     "dependencies": {
+        "@navikt/fnrvalidator": "^1.1.4",
         "@navikt/k9-array-utils": "^0.0.1",
         "@navikt/k9-date-utils": "^0.0.2",
-        "@navikt/fnrvalidator": "^1.1.4",
+        "@navikt/k9-http-utils": "0.0.1",
         "@navikt/k9-period-utils": "^0.0.3",
-        "@navikt/k9-react-components": "^0.0.4",
+        "@navikt/k9-react-components": "^0.0.11",
         "@types/react": "^17.0.3",
         "@types/react-dom": "^17.0.3",
         "axios": "^0.21.1",
@@ -88,8 +89,9 @@
         "nav-frontend-typografi-style": "^1.0.35",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
+        "react-collapse": "^5.1.0",
         "react-day-picker": "^7.4.10",
         "react-dom": "^17.0.2",
-        "react-hook-form": "^7.5.3"
+        "react-hook-form": "^6.15.5"
     }
 }
