--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "psb-inntektsmelding-frontend",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "scripts": {
-        "test": "jest",
+        "test": "jest --passWithNoTests",
         "test-watch": "jest --watch",
         "start": "node ./server.js",
         "build": "webpack --config webpack/webpack-config.production.js",
