--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,12 +5,11 @@ on:
             - main
         paths:
             - 'build/**'
-            - '.github/workflows/deploy.yml'
-            - 'package.json'
+    workflow_dispatch:
+
 env:
     IMAGE_BASE: docker.pkg.github.com/${{ github.repository }}/psb-inntektsmelding-frontend
-    CLUSTER: dev-fss
-    NAMESPACE: default
+
 jobs:
     deploy-docker-image:
         name: Deploy Docker image
@@ -32,27 +31,13 @@ jobs:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
             - name: Kjøre enhetstester
               run: npm test
-            - name: Sette versjon
-              run: |
-                  echo "VERSION=$(npm run version --silent)" >> $GITHUB_ENV
-            - name: Sjekke om tag fins fra før
-              run: |
-                  if git rev-parse "$VERSION" >/dev/null 2>&1; then
-                    echo "Tag $VERSION already exists, aborting"
-                    exit 1
-                  fi
-            - name: Sjekk om bygg finnes
-              run: |
-                  if [ ! -d "build/$VERSION" ]; then
-                    echo "Build folder with name $VERSION does not exist, aborting"
-                    exit 1
-                  fi
             - name: Sette miljøvariabler
               run: |
-                  echo "IMAGE=${IMAGE_BASE}:${VERSION}" >> $GITHUB_ENV
+                  echo "TAG=$(date "+%Y.%m.%d")-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+                  echo "IMAGE=${IMAGE_BASE}:${TAG}" >> $GITHUB_ENV
                   echo "LATEST=${IMAGE_BASE}:latest" >> $GITHUB_ENV
-                  echo "CSS_HASH=$(shasum -b -a 384 build/$VERSION/styles.css | awk '{ print $1 }' | xxd -r -p | base64)" >> $GITHUB_ENV
-                  echo "JS_HASH=$(shasum -b -a 384 build/$VERSION/app.js | awk '{ print $1 }' | xxd -r -p | base64)" >> $GITHUB_ENV
+                  echo "CSS_HASH=$(shasum -b -a 384 build/styles.css | awk '{ print $1 }' | xxd -r -p | base64)" >> $GITHUB_ENV
+                  echo "JS_HASH=$(shasum -b -a 384 build/app.js | awk '{ print $1 }' | xxd -r -p | base64)" >> $GITHUB_ENV
             - name: Bygg og laste opp docker-image
               run: |
                   docker build --tag ${IMAGE} --tag ${LATEST} .
@@ -70,6 +55,7 @@ jobs:
                   RESOURCE: nais/naiserator.yml
                   VARS: nais/dev-fss.json
             - name: Deploy til prod-fss
+              if: github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message, 'ci skip')
               uses: nais/deploy/actions/deploy@v1
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -77,25 +63,20 @@ jobs:
                   CLUSTER: prod-fss
                   RESOURCE: nais/naiserator.yml
                   VARS: nais/prod-fss.json
-            - name: Set changelog
-              run: |
-                  text="$(git --no-pager log $(git describe --tags --abbrev=0)..HEAD --pretty=format:"%h %s")"
-                  text="${text//$'\n'/\\n}"
-                  echo "CHANGELOG=$text" >> $GITHUB_ENV
             - name: Create Release
               id: create_release
               uses: actions/create-release@latest
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
-                  tag_name: ${{ env.VERSION }}
-                  release_name: ${{ env.VERSION }}
+                  tag_name: ${{ TAG }}
+                  release_name: ${{ TAG }}
                   body: |
                       For JS, add this to your app:
                       ```
                       <script
                         type="text/javascript"
-                        src="https://psb-inntektsmelding-frontend.dev.adeo.no/${{ env.VERSION }}/app.js"
+                        src="https://psb-inntektsmelding-frontend.dev.adeo.no/app.js"
                         integrity="sha384-${{ env.JS_HASH }}"
                         crossorigin="anonymous"
                       ></script>
@@ -105,13 +86,10 @@ jobs:
                       ```
                       <link
                         rel="stylesheet"
-                        href="https://psb-inntektsmelding-frontend.dev.adeo.no/${{ env.VERSION }}/styles.css"
+                        href="https://psb-inntektsmelding-frontend.dev.adeo.no/styles.css"
                         integrity="sha384-${{ env.CSS_HASH }}"
                         crossorigin="anonymous"
                       >
                       ```
-
-                      **Changes in this Release**
-                      ${{ env.CHANGELOG }}
                   draft: false
                   prerelease: false
