--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,8 @@ on:
             - main
         paths:
             - 'build/**'
+            - '.github/workflows/deploy.yml'
+            - 'package.json'
     workflow_dispatch:
 
 env:
