--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,7 +72,7 @@ jobs:
                       ```
                       <script
                         type="text/javascript"
-                        src="https://psb-inntektsmelding-frontend.dev.adeo.no/${{ MAJOR_VERSION }}/app.js"
+                        src="https://psb-inntektsmelding-frontend.dev.adeo.no/${{ env.MAJOR_VERSION }}/app.js"
                         integrity="sha384-${{ env.JS_HASH }}"
                         crossorigin="anonymous"
                       ></script>
@@ -82,7 +82,7 @@ jobs:
                       ```
                       <link
                         rel="stylesheet"
-                        href="https://psb-inntektsmelding-frontend.dev.adeo.no/${{ MAJOR_VERSION }}/styles.css"
+                        href="https://psb-inntektsmelding-frontend.dev.adeo.no/${{ env.MAJOR_VERSION }}/styles.css"
                         integrity="sha384-${{ env.CSS_HASH }}"
                         crossorigin="anonymous"
                       >
