--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
         "babel-loader": "^8.2.2",
         "css-loader": "^5.1.3",
         "css-minimizer-webpack-plugin": "^3.0.0",
-        "eslint": "^7.22.0",
+        "eslint": "^7.29.0",
         "eslint-config-airbnb": "^18.2.1",
-        "eslint-config-prettier": "^8.1.0",
-        "eslint-plugin-import": "^2.22.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.23.4",
         "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.3.1",
-        "eslint-plugin-react": "^7.23.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "file-loader": "^6.2.0",
         "fork-ts-checker-webpack-plugin": "^6.2.0",
@@ -44,6 +44,7 @@
         "less": "^4.1.1",
         "less-loader": "^8.0.0",
         "mini-css-extract-plugin": "^1.3.9",
+        "pre-commit": "^1.2.2",
         "prettier": "^2.2.1",
         "terser-webpack-plugin": "^5.1.1",
         "ts-jest": "^26.5.4",
