--- a/package.json
+++ b/package.json
@@ -15,84 +15,90 @@
     "author": "NAV IT",
     "license": "MIT",
     "devDependencies": {
-        "@babel/cli": "^7.13.10",
-        "@babel/core": "^7.13.10",
-        "@babel/node": "^7.13.12",
-        "@babel/plugin-proposal-optional-chaining": "^7.13.12",
-        "@babel/preset-env": "^7.13.12",
-        "@babel/preset-react": "^7.12.13",
-        "@babel/preset-typescript": "^7.13.0",
-        "@types/jest": "^26.0.21",
-        "@typescript-eslint/eslint-plugin": "^4.19.0",
-        "@typescript-eslint/parser": "^4.19.0",
+        "@babel/cli": "^7.15.4",
+        "@babel/core": "^7.15.5",
+        "@babel/node": "^7.15.4",
+        "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+        "@babel/preset-env": "^7.15.4",
+        "@babel/preset-react": "^7.14.5",
+        "@babel/preset-typescript": "^7.15.0",
+        "@types/jest": "^27.0.1",
+        "@typescript-eslint/eslint-plugin": "^4.30.0",
+        "@typescript-eslint/parser": "^4.30.0",
         "babel-loader": "^8.2.2",
-        "css-loader": "^5.1.3",
+        "css-loader": "^6.2.0",
         "css-minimizer-webpack-plugin": "^3.0.2",
-        "eslint": "^7.29.0",
+        "eslint": "^7.32.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-import": "^2.24.2",
         "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-react": "^7.24.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.25.1",
         "eslint-plugin-react-hooks": "^4.2.0",
         "file-loader": "^6.2.0",
-        "fork-ts-checker-webpack-plugin": "^6.3.2",
+        "fork-ts-checker-webpack-plugin": "^6.3.3",
         "html-webpack-plugin": "^5.3.2",
         "is-svg": "^4.3.1",
-        "jest": "^26.6.3",
+        "jest": "^27.1.0",
         "less": "^4.1.1",
-        "less-loader": "^8.0.0",
-        "mini-css-extract-plugin": "^1.3.9",
+        "less-loader": "^10.0.1",
+        "mini-css-extract-plugin": "^2.2.2",
         "pre-commit": "^1.2.2",
-        "prettier": "^2.2.1",
-        "terser-webpack-plugin": "^5.1.4",
-        "ts-jest": "^26.5.4",
-        "ts-node": "^9.1.1",
-        "typescript": "^4.2.3",
-        "webpack": "^5.51.1",
+        "prettier": "^2.3.2",
+        "terser-webpack-plugin": "^5.2.3",
+        "ts-jest": "^27.0.5",
+        "ts-node": "^10.2.1",
+        "typescript": "^4.4.2",
+        "webpack": "^5.52.0",
         "webpack-cli": "^4.8.0",
-        "webpack-dev-server": "^4.0.0",
+        "webpack-dev-server": "^4.1.0",
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
         "@navikt/fnrvalidator": "^1.1.4",
         "@navikt/k9-array-utils": "^0.0.1",
-        "@navikt/k9-date-utils": "^0.0.2",
-        "@navikt/k9-http-utils": "0.0.1",
-        "@navikt/k9-period-utils": "^0.0.3",
-        "@navikt/k9-react-components": "^0.0.11",
-        "@types/react": "^17.0.3",
-        "@types/react-dom": "^17.0.3",
-        "axios": "^0.21.1",
-        "classnames": "^2.2.6",
+        "@navikt/k9-date-utils": "^0.0.5",
+        "@navikt/k9-form-utils": "^1.0.0",
+        "@navikt/k9-http-utils": "0.0.2",
+        "@navikt/k9-period-utils": "^0.0.8",
+        "@navikt/k9-react-components": "^0.1.5",
+        "@popperjs/core": "^2.10.1",
+        "@types/react": "^17.0.20",
+        "@types/react-dom": "^17.0.9",
+        "axios": "^0.21.3",
+        "classnames": "^2.3.1",
         "cors": "^2.8.5",
-        "dayjs": "^1.10.4",
+        "dayjs": "^1.10.6",
         "express": "^4.17.1",
         "lodash.throttle": "^4.1.1",
-        "nav-datovelger": "^11.0.0",
-        "nav-frontend-alertstriper": "^3.0.51",
-        "nav-frontend-alertstriper-style": "^2.0.38",
-        "nav-frontend-core": "^5.0.11",
-        "nav-frontend-ikoner-assets": "^2.0.10",
-        "nav-frontend-js-utils": "^1.0.17",
-        "nav-frontend-knapper": "^2.0.32",
-        "nav-frontend-knapper-style": "^1.0.17",
-        "nav-frontend-lenker": "^1.0.60",
-        "nav-frontend-lenker-style": "^1.0.2",
-        "nav-frontend-paneler": "^2.0.32",
-        "nav-frontend-paneler-style": "^1.0.2",
-        "nav-frontend-skjema": "^3.2.3",
-        "nav-frontend-skjema-style": "^2.2.2",
-        "nav-frontend-spinner": "^2.0.16",
+        "nav-datovelger": "^12.1.2",
+        "nav-frontend-alertstriper": "^4.0.1",
+        "nav-frontend-alertstriper-style": "^3.0.1",
+        "nav-frontend-chevron": "^1.0.30",
+        "nav-frontend-chevron-style": "^1.0.4",
+        "nav-frontend-core": "^6.0.1",
+        "nav-frontend-ikoner-assets": "^3.0.1",
+        "nav-frontend-ikonknapper": "^1.0.32",
+        "nav-frontend-js-utils": "^1.0.19",
+        "nav-frontend-knapper": "^3.1.1",
+        "nav-frontend-knapper-style": "^2.1.1",
+        "nav-frontend-lenker": "^2.0.1",
+        "nav-frontend-lenker-style": "^2.0.1",
+        "nav-frontend-paneler": "^3.0.1",
+        "nav-frontend-paneler-style": "^2.0.1",
+        "nav-frontend-skjema": "^4.0.2",
+        "nav-frontend-skjema-style": "^3.0.1",
+        "nav-frontend-spinner": "^3.0.1",
         "nav-frontend-spinner-style": "^1.0.2",
-        "nav-frontend-typografi": "^3.0.4",
-        "nav-frontend-typografi-style": "^1.0.35",
+        "nav-frontend-typografi": "^4.0.1",
+        "nav-frontend-typografi-style": "^2.0.1",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-collapse": "^5.1.0",
         "react-day-picker": "^7.4.10",
         "react-dom": "^17.0.2",
-        "react-hook-form": "^6.15.5"
+        "react-hook-form": "^7.15.0",
+        "react-popper": "^2.2.5"
     }
 }
