--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
+        "@navikt/ds-react": "^0.13.1",
         "@navikt/fnrvalidator": "^1.1.4",
         "@navikt/k9-array-utils": "^0.0.1",
         "@navikt/k9-date-utils": "^0.0.2",
+        "@navikt/k9-form-utils": "^1.0.0",
         "@navikt/k9-http-utils": "0.0.1",
         "@navikt/k9-period-utils": "^0.0.3",
         "@navikt/k9-react-components": "^0.0.11",
