--- a/package.json
+++ b/package.json
@@ -75,8 +75,11 @@
         "nav-datovelger": "^11.0.0",
         "nav-frontend-alertstriper": "^3.0.51",
         "nav-frontend-alertstriper-style": "^2.0.38",
+        "nav-frontend-chevron": "^1.0.30",
+        "nav-frontend-chevron-style": "^1.0.4",
         "nav-frontend-core": "^5.0.11",
         "nav-frontend-ikoner-assets": "^2.0.10",
+        "nav-frontend-ikonknapper": "^2.1.2",
         "nav-frontend-js-utils": "^1.0.17",
         "nav-frontend-knapper": "^2.0.32",
         "nav-frontend-knapper-style": "^1.0.17",
@@ -95,6 +98,6 @@
         "react-collapse": "^5.1.0",
         "react-day-picker": "^7.4.10",
         "react-dom": "^17.0.2",
-        "react-hook-form": "^6.15.5"
+        "react-hook-form": "^7.20.2"
     }
 }
