kan redigere aksjonspunkter

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
+        "@navikt/ds-icons": "^0.6.3",
         "@navikt/ds-react": "^0.13.1",
         "@navikt/fnrvalidator": "^1.1.4",
         "@navikt/k9-array-utils": "^0.0.1",
