--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
         "nav-frontend-chevron": "^1.0.30",
         "nav-frontend-chevron-style": "^1.0.4",
         "nav-frontend-core": "^5.0.11",
+        "nav-frontend-ekspanderbartpanel": "^4.0.2",
+        "nav-frontend-ekspanderbartpanel-style": "^2.0.1",
         "nav-frontend-ikoner-assets": "^2.0.10",
         "nav-frontend-ikonknapper": "^2.1.2",
         "nav-frontend-js-utils": "^1.0.17",
