--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "dev": "node webpack/webpack-config.development.js",
         "api-mock": "ts-node mock/api-mock.ts",
         "majorVersion": "node ./majorVersion.js",
-        "lint": "eslint 'src/**/*.{ts,tsx,js,jsx}'"
+        "lint": "eslint 'src/**/*.{ts,tsx,js,jsx}'",
+        "start:e2e": "nodemon mock/api-mock.ts & node webpack/webpack-config.development.js"
     },
     "keywords": [],
     "author": "NAV IT",
@@ -44,6 +45,7 @@
         "less": "^4.1.1",
         "less-loader": "^8.0.0",
         "mini-css-extract-plugin": "^1.3.9",
+        "nodemon": "^2.0.15",
         "pre-commit": "^1.2.2",
         "prettier": "^2.2.1",
         "terser-webpack-plugin": "^5.1.4",
