Byttet ut k9-react-components med ft-plattform-komponenter Bytter til yarn

--- a/package.json
+++ b/package.json
@@ -61,12 +61,12 @@
         "@navikt/ds-icons": "^0.6.3",
         "@navikt/ds-react": "^0.13.1",
         "@navikt/fnrvalidator": "^1.1.4",
+        "@navikt/ft-plattform-komponenter": "1.0.19",
         "@navikt/k9-array-utils": "^0.0.1",
-        "@navikt/k9-date-utils": "^0.0.2",
-        "@navikt/k9-form-utils": "^1.0.1",
-        "@navikt/k9-http-utils": "0.0.1",
-        "@navikt/k9-period-utils": "^0.0.3",
-        "@navikt/k9-react-components": "^0.1.8",
+        "@navikt/k9-date-utils": "^0.0.8",
+        "@navikt/k9-form-utils": "^1.0.6",
+        "@navikt/k9-http-utils": "0.0.3",
+        "@navikt/k9-period-utils": "^0.0.11",
         "@types/react": "^17.0.3",
         "@types/react-dom": "^17.0.3",
         "axios": "^0.21.4",
