--- a/package.json
+++ b/package.json
@@ -16,93 +16,93 @@
     "author": "NAV IT",
     "license": "MIT",
     "devDependencies": {
-        "@babel/cli": "^7.13.10",
-        "@babel/core": "^7.13.10",
-        "@babel/node": "^7.13.12",
-        "@babel/plugin-proposal-optional-chaining": "^7.13.12",
-        "@babel/preset-env": "^7.13.12",
-        "@babel/preset-react": "^7.12.13",
-        "@babel/preset-typescript": "^7.15.0",
-        "@types/jest": "^27.0.2",
-        "@typescript-eslint/eslint-plugin": "^4.31.2",
-        "@typescript-eslint/parser": "^4.31.2",
-        "babel-loader": "^8.2.2",
-        "css-loader": "^5.1.3",
-        "css-minimizer-webpack-plugin": "^3.0.2",
-        "eslint": "^7.29.0",
-        "eslint-config-airbnb": "^18.2.1",
-        "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.23.4",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-react": "^7.24.0",
-        "eslint-plugin-react-hooks": "^4.2.0",
+        "@babel/cli": "^7.18.10",
+        "@babel/core": "^7.18.10",
+        "@babel/node": "^7.18.10",
+        "@babel/plugin-proposal-optional-chaining": "^7.18.9",
+        "@babel/preset-env": "^7.18.10",
+        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.18.6",
+        "@types/jest": "^28.1.7",
+        "@typescript-eslint/eslint-plugin": "^5.33.1",
+        "@typescript-eslint/parser": "^5.33.1",
+        "babel-loader": "^8.2.5",
+        "css-loader": "^6.7.1",
+        "css-minimizer-webpack-plugin": "^4.0.0",
+        "eslint": "^8.22.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsx-a11y": "^6.6.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "file-loader": "^6.2.0",
-        "fork-ts-checker-webpack-plugin": "^6.3.2",
+        "fork-ts-checker-webpack-plugin": "^7.2.13",
         "html-webpack-plugin": "^5.3.2",
-        "is-svg": "^4.3.1",
-        "jest": "^27.2.1",
-        "less": "^4.1.1",
-        "less-loader": "^8.0.0",
-        "mini-css-extract-plugin": "^1.3.9",
-        "nodemon": "^2.0.15",
+        "is-svg": "^4.3.2",
+        "jest": "^28.1.3",
+        "less": "^4.1.3",
+        "less-loader": "^11.0.0",
+        "mini-css-extract-plugin": "^2.6.1",
+        "nodemon": "^2.0.19",
         "pre-commit": "^1.2.2",
-        "prettier": "^2.2.1",
-        "terser-webpack-plugin": "^5.1.4",
-        "ts-jest": "^27.0.5",
-        "ts-node": "^9.1.1",
-        "typescript": "^4.4.3",
-        "webpack": "^5.51.1",
-        "webpack-cli": "^4.8.0",
-        "webpack-dev-server": "^4.2.1",
+        "prettier": "^2.7.1",
+        "terser-webpack-plugin": "^5.3.5",
+        "ts-jest": "^28.0.8",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.7.4",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
+        "webpack-dev-server": "^4.10.0",
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
-        "@navikt/ds-icons": "^0.6.3",
-        "@navikt/ds-react": "^0.13.1",
-        "@navikt/fnrvalidator": "^1.1.4",
-        "@navikt/ft-plattform-komponenter": "1.0.19",
+        "@navikt/ds-icons": "^1.0.2",
+        "@navikt/ds-react": "^1.0.2",
+        "@navikt/fnrvalidator": "^1.3.0",
+        "@navikt/ft-plattform-komponenter": "1.0.32",
         "@navikt/k9-array-utils": "^0.0.1",
         "@navikt/k9-date-utils": "^0.0.8",
         "@navikt/k9-form-utils": "^1.0.6",
         "@navikt/k9-http-utils": "0.0.3",
         "@navikt/k9-period-utils": "^0.0.11",
-        "@types/react": "^17.0.3",
-        "@types/react-dom": "^17.0.3",
-        "axios": "^0.21.4",
+        "@types/react": "^18.0.17",
+        "@types/react-dom": "^18.0.6",
+        "axios": "^0.27.2",
         "classnames": "^2.3.1",
         "cors": "^2.8.5",
-        "dayjs": "^1.10.4",
-        "express": "^4.17.1",
+        "dayjs": "^1.11.5",
+        "express": "^4.18.1",
         "lodash.throttle": "^4.1.1",
-        "nav-datovelger": "^11.0.0",
-        "nav-frontend-alertstriper": "^3.0.51",
-        "nav-frontend-alertstriper-style": "^2.0.38",
+        "nav-datovelger": "^12.6.0",
+        "nav-frontend-alertstriper": "^4.0.2",
+        "nav-frontend-alertstriper-style": "^3.0.2",
         "nav-frontend-chevron": "^1.0.30",
         "nav-frontend-chevron-style": "^1.0.4",
-        "nav-frontend-core": "^5.0.11",
-        "nav-frontend-ekspanderbartpanel": "^4.0.2",
-        "nav-frontend-ekspanderbartpanel-style": "^2.0.1",
-        "nav-frontend-ikoner-assets": "^2.0.10",
-        "nav-frontend-ikonknapper": "^2.1.2",
+        "nav-frontend-core": "^6.0.1",
+        "nav-frontend-ekspanderbartpanel": "^4.0.4",
+        "nav-frontend-ekspanderbartpanel-style": "^2.0.2",
+        "nav-frontend-ikoner-assets": "^3.0.1",
+        "nav-frontend-ikonknapper": "^2.1.3",
         "nav-frontend-js-utils": "^1.0.17",
-        "nav-frontend-knapper": "^2.0.32",
-        "nav-frontend-knapper-style": "^1.0.17",
-        "nav-frontend-lenker": "^1.0.60",
-        "nav-frontend-lenker-style": "^1.0.2",
-        "nav-frontend-paneler": "^2.0.32",
-        "nav-frontend-paneler-style": "^1.0.2",
-        "nav-frontend-skjema": "^3.2.3",
-        "nav-frontend-skjema-style": "^2.2.2",
-        "nav-frontend-spinner": "^2.0.16",
+        "nav-frontend-knapper": "^3.1.3",
+        "nav-frontend-knapper-style": "^2.1.2",
+        "nav-frontend-lenker": "^2.0.2",
+        "nav-frontend-lenker-style": "^2.0.2",
+        "nav-frontend-paneler": "^3.0.2",
+        "nav-frontend-paneler-style": "^2.0.2",
+        "nav-frontend-skjema": "^4.0.6",
+        "nav-frontend-skjema-style": "^3.0.3",
+        "nav-frontend-spinner": "^3.0.1",
         "nav-frontend-spinner-style": "^1.0.2",
-        "nav-frontend-typografi": "^3.0.4",
-        "nav-frontend-typografi-style": "^1.0.35",
-        "prop-types": "^15.7.2",
+        "nav-frontend-typografi": "^4.0.2",
+        "nav-frontend-typografi-style": "^2.0.2",
+        "prop-types": "^15.8.1",
         "react": "^17.0.2",
-        "react-collapse": "^5.1.0",
-        "react-day-picker": "^7.4.10",
+        "react-collapse": "^5.1.1",
+        "react-day-picker": "^7.x",
         "react-dom": "^17.0.2",
-        "react-hook-form": "^7.20.2"
+        "react-hook-form": "^7.34.2"
     }
 }
