--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "css-loader": "^6.7.1",
         "css-minimizer-webpack-plugin": "^4.0.0",
         "eslint": "^8.22.0",
-        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb": "18.x",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
@@ -58,6 +58,7 @@
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
+        "@navikt/ds-css": "^1.0.2",
         "@navikt/ds-icons": "^1.0.2",
         "@navikt/ds-react": "^1.0.2",
         "@navikt/fnrvalidator": "^1.3.0",
