--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@storybook/manager-webpack5": "^6.5.12",
         "@storybook/react": "^6.5.12",
         "@storybook/testing-library": "^0.0.13",
+        "@storybook/testing-react": "^1.3.0",
         "@types/jest": "^28.1.7",
         "@typescript-eslint/eslint-plugin": "^5.33.1",
         "@typescript-eslint/parser": "^5.33.1",
@@ -80,6 +81,7 @@
         "@navikt/k9-form-utils": "^1.0.6",
         "@navikt/k9-http-utils": "0.0.3",
         "@navikt/k9-period-utils": "^0.0.11",
+        "@testing-library/react": "^13.4.0",
         "@types/react": "^18.0.17",
         "@types/react-dom": "^18.0.6",
         "axios": "^0.27.2",
