--- a/package.json
+++ b/package.json
@@ -58,10 +58,10 @@
         "mini-css-extract-plugin": "^2.6.1",
         "msw": "^0.47.2",
         "msw-storybook-addon": "^1.6.3",
-        "nodemon": "^2.0.19",
+        "nodemon": "^2.0.20",
         "pre-commit": "^1.2.2",
         "prettier": "^2.7.1",
-        "terser-webpack-plugin": "^5.3.5",
+        "terser-webpack-plugin": "^5.3.6",
         "ts-jest": "^28.0.8",
         "ts-node": "^10.9.1",
         "typescript": "^4.7.4",
@@ -71,9 +71,9 @@
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
-        "@navikt/ds-css": "^1.0.2",
-        "@navikt/ds-icons": "^1.0.2",
-        "@navikt/ds-react": "^1.0.2",
+        "@navikt/ds-css": "^1.3.1",
+        "@navikt/ds-icons": "^1.3.1",
+        "@navikt/ds-react": "^1.3.1",
         "@navikt/fnrvalidator": "^1.3.0",
         "@navikt/ft-plattform-komponenter": "1.0.32",
         "@navikt/k9-array-utils": "^0.0.1",
@@ -85,10 +85,13 @@
         "@types/react": "^18.0.17",
         "@types/react-dom": "^18.0.6",
         "axios": "^0.27.2",
+        "babel-jest": "^29.0.3",
         "classnames": "^2.3.1",
         "cors": "^2.8.5",
         "dayjs": "^1.11.5",
         "express": "^4.18.1",
+        "jest-css-modules": "^2.1.0",
+        "jest-environment-jsdom": "^29.0.3",
         "lodash.throttle": "^4.1.1",
         "nav-datovelger": "^12.6.0",
         "nav-frontend-alertstriper": "^4.0.2",
@@ -114,10 +117,10 @@
         "nav-frontend-typografi": "^4.0.2",
         "nav-frontend-typografi-style": "^2.0.2",
         "prop-types": "^15.8.1",
-        "react": "^17.0.2",
+        "react": "^18.2.0",
         "react-collapse": "^5.1.1",
         "react-day-picker": "^7.x",
-        "react-dom": "^17.0.2",
+        "react-dom": "^18.2.0",
         "react-hook-form": "^7.34.2",
         "storybook-css-modules": "^1.0.8",
         "tsconfig-paths-webpack-plugin": "^4.0.0"
