legger til tester hvor inntektsmelding mangler for 1 arbeidsgiver

--- a/package.json
+++ b/package.json
@@ -75,13 +75,16 @@
         "@navikt/ds-icons": "^1.3.2",
         "@navikt/ds-react": "^1.3.2",
         "@navikt/fnrvalidator": "^1.3.3",
+        "@navikt/ft-form-hooks": "^2.0.4",
         "@navikt/ft-plattform-komponenter": "1.1.3",
         "@navikt/k9-array-utils": "^0.0.1",
         "@navikt/k9-date-utils": "^0.0.8",
-        "@navikt/k9-form-utils": "^1.0.6",
         "@navikt/k9-http-utils": "0.0.3",
         "@navikt/k9-period-utils": "^0.0.12",
+        "@popperjs/core": "^2.11.6",
+        "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^14.4.3",
         "@types/react": "^18.0.20",
         "@types/react-dom": "^18.0.6",
         "axios": "^0.27.2",
@@ -123,6 +126,7 @@
         "react-day-picker": "^7.x",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.35.0",
+        "react-popper": "^2.3.0",
         "storybook-css-modules": "^1.0.8",
         "tsconfig-paths-webpack-plugin": "^4.0.0",
         "uuid": "^9.0.0"
