--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,9 @@
         "module": "commonjs",
         "declaration": true,
         "skipLibCheck": true,
-        "target": "esnext",
+        "target": "ESNext",
         "typeRoots": ["./node_modules/@types"],
         "esModuleInterop": true
     },
-    "exclude": ["node_modules", "build"]
+    "exclude": ["build"]
 }
