Revert "Merge pull request #29 from navikt/bugfix/status-ikke-paakrevd-kan-ikke-loese-aksjonspunkt"
This reverts commit 968a302b3a7bbb2c23ca6a1a7c19e4d1852ce752, reversing
changes made to f5a9383dfad520524d283098f1d0bb06fc2a824b.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,9 @@
         "module": "commonjs",
         "declaration": true,
         "skipLibCheck": true,
-        "target": "ESNext",
+        "target": "esnext",
         "typeRoots": ["./node_modules/@types"],
         "esModuleInterop": true
     },
-    "exclude": ["build"]
+    "exclude": ["node_modules", "build"]
 }
