--- a/.eslintrc
+++ b/.eslintrc
@@ -30,10 +30,9 @@
     ],
     "rules": {
         "@typescript-eslint/no-use-before-define": ["error"],
-        "react/function-component-definition": 0,
-        "import/no-extraneous-dependencies": 0,
         "@typescript-eslint/no-shadow": "error",
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+        "import/no-extraneous-dependencies": ["error", { "devDependencies": ["**/*.test.ts", "**/*.test.tsx"] }],
         "import/extensions": [
             "error",
             "ignorePackages",
