--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
         "@navikt/ds-react": "^1.3.5",
         "@navikt/fnrvalidator": "^1.3.3",
         "@navikt/ft-form-hooks": "^2.0.7",
-        "@navikt/ft-plattform-komponenter": "1.1.7",
+        "@navikt/ft-plattform-komponenter": "^1.2.2",
         "@navikt/k9-array-utils": "^0.0.1",
         "@navikt/k9-date-utils": "^0.0.8",
         "@navikt/k9-http-utils": "0.0.3",
