velger riktig build-mappe

--- a/package.json
+++ b/package.json
@@ -133,6 +133,6 @@
         "uuid": "^9.0.0"
     },
     "msw": {
-        "workerDirectory": "dist"
+        "workerDirectory": "public"
     }
 }
